fix: align comments if new comment is added by turbo

--- a/app/assets/stylesheets/comments_popup.css
+++ b/app/assets/stylesheets/comments_popup.css
@@ -14,8 +14,7 @@
     height: 380px;
     /* align to vertical bottom */
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+    flex-direction: column-reverse;
 }
 
 #new-comment-form {
